--- a/classic/css/tabs/tab_close_hidden.css
+++ b/classic/css/tabs/tab_close_hidden.css
@@ -14,6 +14,5 @@
   width: 0.5px !important;
   max-width: 0.5px !important;
   padding-inline-start: unset !important;
-  margin-inline-end: unset !important;
   padding: 0px !important;
 }
